--- a/index.html
+++ b/index.html
@@ -16,7 +16,17 @@
 
     <div class="container">
         <h1>Lime Spoofer</h1>
-        <p>Updating Now</p>
+        <p>
+            <span>U</span>
+            <span>p</span>
+            <span>d</span>
+            <span>a</span>
+            <span>t</span>
+            <span>i</span>
+            <span>n</span>
+            <span>g</span>
+        </p>
+        
         <button class="cta-button">Support</button>
     </div>
 
