--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div class="popup-content">
         <span class="close-btn" onclick="closePopup()">&times;</span>
         <h2>Status</h2>
-        <a href="https://lme4545.github.io/Lime-Spoofer/" class="popup-button">Undetected</a>
+        <a href="https://lme4545.github.io/Lime-Spoofer/" class="popup-button">UnDetected</a>
     </div>
 </div>
     </div>
